# DevGenesis

./: .gitignore  AMELIORATIONS_UI.md  AMELIORATIONS_UI_FINALE.md  CLEANUP.bat  CORRECTION_FINALE_UI.md  CORRECTION_GROUPBOX.md  CORRECTION_SUPERPOSITION.md  CORRECTION_TAILLE_CHAMPS.md  ICONS_README.md  LICENSE  NETTOYAGE_EFFECTUE.md  README.md  REFACTORISATION_COMPLETE.md  SPLASH_SCREEN_VIDEO.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  test_icons.py
devgenesis/: __init__.py  __main__.py  config.py  custom_config.py  database.py  generator.py  logger.py  main.py  models.py
devgenesis/services/: __init__.py  environment.py
devgenesis/templates/: __init__.py  builtin_templates.py
devgenesis/ui/: __init__.py  icons.py  main_window.py  splash_screen.py  styles.py
devgenesis/ui/components/: __init__.py  header.py
devgenesis/ui/dialogs/: preview_dialog.py
devgenesis/ui/tabs/: __init__.py  custom_template_tab.py  history_tab.py  new_project_tab.py  settings_tab.py  templates_tab.py
